--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "react-hook-form": "^7.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
